add prices, profiles, jpa layer
