# Server/Source/server/server-web/src/main/java/ro/hacktm/pricediff/ProductsEndpointRS.java
@@ -8,6 +8,7 @@ import ro.hacktm.pricediff.mdl.CategoryMdl;
 import ro.hacktm.pricediff.mdl.GpsPosition;
 import ro.hacktm.pricediff.mdl.ProductMdl;
 import ro.hacktm.pricediff.mdl.ProductResponseMdl;
+import ro.hacktm.pricediff.mdl.ProfileMdl;
 
 import javax.ejb.Stateless;
 import javax.enterprise.context.RequestScoped;
@@ -68,21 +69,42 @@ public class ProductsEndpointRS {
             @NotNull @ApiParam(required = true, value = "gps position.") @QueryParam(value = "gpsPosition") final String gpsPosition,
             @ApiParam(required = true, value = "barcode.") @QueryParam(value = "barcode") final String barcode,
             @NotNull @ApiParam(required = true, value = "name.") @QueryParam(value = "name") final String name,
+            @NotNull @ApiParam(required = true, value = "userId.") @QueryParam(value = "userId") final String userId,
+            @NotNull @ApiParam(required = true, value = "price.") @QueryParam(value = "price") final String price,
             @NotNull @ApiParam(required = true, allowableValues = "LACTATE, FRUCTE, CARNE, DULCIURI", value = "category.") @QueryParam(value = "category") final CategoryMdl category
                                ) {
         final String[] split = gpsPosition.split(",");
         final GpsPosition store = GpsPosition.determineGpsPosition(Double.valueOf(split[0]), Double.valueOf(split[1]));
-        final ProductMdl productMdl = productsControl.addProduct(name, barcode, category, store);
+        final ProductMdl productMdl = productsControl.addProduct(name, barcode, category, store, userId, Double.valueOf(price));
         return Response.ok(productMdl).build();
+    }
+
+    @GET
+    @Path("addProfile")
+    @ApiOperation(value = "Add profile", response = ProfileMdl.class)
+    public Response addProfile(
+            @NotNull @ApiParam(required = true, value = "username.") @QueryParam(value = "username") final String username,
+            @NotNull @ApiParam(required = true, value = "password.") @QueryParam(value = "password") final String password,
+            @NotNull @ApiParam(required = true, value = "email.") @QueryParam(value = "email") final String email) {
+        final ProfileMdl profileMdl = productsControl.addProfile(username, password, email);
+        return Response.ok(profileMdl).build();
     }
 
     @GET
     @Path("deal")
     @ApiOperation(value = "Find best deal", response = ProductResponseMdl[].class)
-    public Response findBestDeal(
+    public ProductResponseMdl[] findBestDeal(
             @NotNull @ApiParam(required = true, value = "list of product IDs") @QueryParam("list") final List<String> list
                               ) {
         final List<ProductResponseMdl> bestDeal = productsControl.findBestDeal(list);
-        return Response.ok(bestDeal.toArray(new ProductResponseMdl[] {})).build();
+        return bestDeal.toArray(new ProductResponseMdl[] {});
     }
+
+    @GET
+    @Path("resp")
+    @ApiOperation(value = "Find resp", response = ProductResponseMdl.class)
+    public ProductResponseMdl productResponse() {
+        return new ProductResponseMdl();
+    }
+
 }
